# resume_ranker

./: .gitignore  README.md  audit_post_pymupdf.json  benchmark_after_phase_4a6.json  block_detector.py  contact_parser.py  domain_detector.py  education_parser.py  experience_parser.py  field_parsers.py  layout_extractor.py  main.py  nlp_extractor.py  one_shot_doc.md  output_formatter.py  pdf_text_extractor.py  pipeline.py  project_parser.py  pyproject.toml  scorer.py  section_detector.py  section_parser.py  section_registry.py  skills_dictionary.json  skills_parser.py  test_scorer.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  debug_scoring.py  extraction_audit.py  main.py  pyproject.toml  template.yaml
backend/benchmarks/baselines/: benchmark_after_phase_4b.json
backend/benchmarks/outputs/: extraction_accuracy_audit.json  extraction_issues.json
backend/benchmarks/reports/: benchmark_v2.json  benchmark_v2.md
backend/deploy/: README.MD  requirements.txt  samconfig.toml  template.yaml
backend/docs/: DOMAIN_DECISION.md  IMPLEMENTATION.md  PROJECT_STRUCTURE.md
backend/scripts/: benchmark.py
backend/src/: __init__.py  lambda_handler.py
backend/src/api/: app.py
backend/src/config/: aws.py
backend/src/core/: output_cleaning.py  pipeline.py  quality_scoring.py  section_assembly.py
backend/src/extractors/: __init__.py
backend/src/infrastructure/: __init__.py  health.py
backend/src/ranking/: __init__.py  bm25_scorer.py  domain_classifier.py  scorer.py  similarity.py  skill_inference.py  (+1 more)
backend/tests/: test_domain_guardrails.py
(+186 files in other folders)
