[project]
name = "resume-ranking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.1",
    "fastapi>=0.115.0",
    "nltk>=3.9.4",
    "pdfplumber>=0.11.10",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
]
