[project]
name = "resume-ranking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.36",
    "fastapi>=0.115.0",
    "mangum>=0.19.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
]
